--- a/10_9.md
+++ b/10_9.md
@@ -1,6 +1,6 @@
 \*\*
 
-Consider the following invocation of the `fstatcheck` would fetch and display metadata for the file `foo.txt`. However, when we run it on our system, it fails with a "bad file descriptor." Given this behavior, fill in the pseudocode that the shell must be executing between fork and execve calls:
+Consider the following invocation of the `fstatcheck` would fetch and display metadata for the file `foo.txt`.
 
 ```c
 if (Fork() == 0) { /* child */
